Attempt to fix poor alignment on student landing

--- a/public/main.css
+++ b/public/main.css
@@ -91,13 +91,13 @@ div {
 	margin-right: 0.2em;
 }
 
-.landingPrompt {
-	float: left;
-	padding-left: 1em;
-}
-
 .mortarContainer {
-	margin-top: 10em;
+	margin-top: 100px;
+	margin-left: 0;
+	padding: 0px;
+	font-size: 20px;
+	display: flex;
+	flex-direction: column;
 }
 
 input[type=checkbox]
